# flecs

./: CMakeLists.txt
.github/workflows/: integration.yml
include/: flecs.h
include/flecs/util/: map.h  os_api.h
src/: column_system.c  entity.c  flecs_private.h  map.c  misc.c  os_api.c  stats.c  system.c  table.c  type.c  types.h  vector.c  world.c
